[gd_scene load_steps=5 format=3 uid="uid://5i5maups1yjv"]

[ext_resource type="Script" path="res://scenes/ListeningUI/master_recording_container.gd" id="1_g84a3"]
[ext_resource type="PackedScene" uid="uid://bbh4cgmuvmslu" path="res://scenes/AudioPlayer/audio_player.tscn" id="2_7goaq"]
[ext_resource type="PackedScene" uid="uid://c0k1dfksrc6br" path="res://scenes/APIClient/ClientWrappers/get_submit_url.tscn" id="3_w0g7k"]
[ext_resource type="PackedScene" uid="uid://cacmlvjd22f63" path="res://scenes/APIClient/ClientWrappers/submit_folklore.tscn" id="4_mfi7g"]

[node name="MasterRecordingContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g84a3")

[node name="StoryTitleEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Title"
alignment = 1

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioPlayer" parent="." instance=ExtResource("2_7goaq")]
layout_mode = 2
recording_enabled = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Load WAV file"

[node name="Spacer2" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 2
text = "Tell or retell the story in your own words.

Use your microphone. Please try to reduce background noise, speak clearly, and in English.

Stories must be less than 3 minutes long."
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SubmitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Submit Story"

[node name="GetSubmitURL" parent="." instance=ExtResource("3_w0g7k")]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Going back will clear your recordings.

Are you sure you want to go back?"

[node name="S3PutRequest" type="HTTPRequest" parent="."]

[node name="SubmitFolklore" parent="." instance=ExtResource("4_mfi7g")]

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.wav")

[connection signal="recording_stopped" from="AudioPlayer" to="." method="_on_audio_player_recording_stopped"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="url_received" from="GetSubmitURL" to="." method="_on_get_submit_url_url_received"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="request_completed" from="S3PutRequest" to="." method="_on_s_3_put_request_request_completed"]
[connection signal="folklore_submitted" from="SubmitFolklore" to="." method="_on_submit_folklore_folklore_submitted"]
[connection signal="request_failed" from="SubmitFolklore" to="." method="_on_submit_folklore_request_failed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
